# coq-ai

./: .gitignore  Cargo.toml  README.md
coq_parser/: .gitignore  Cargo.toml
coq_parser/src/: interact.rs  lexer.rs  lib.rs  main.rs  parser.rs  project.rs  tactic.rs
coq_parser/tests/: parsing_test.rs
coq_parser/tests/project/: _CoqProject  group.v  puzzles.v  set.v  test.v
src/: interact.rs  lexer.rs  main.rs  parser.rs  project.rs
tiny_theorems/: Cargo.toml  README.md
tiny_theorems/src/: env.rs  gen.rs  lib.rs  main.rs  parser.rs  pyenv.rs  refine.rs  refiner.rs  solver.rs  theorem.rs  utility.rs  valid.rs
tiny_theorems/train/: tokenizer.ipynb  train-unroll.ipynb  train.ipynb
train/: train.ipynb
train/losses/: loss-textbooks.pickle
