[package]
name = "tiny_theorems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
rand = "0.8.5"
rand_chacha = "0.3.1"
pyo3 = { version = "0.16", features = ["extension-module", "anyhow"] }

[lib]
crate-type = ["cdylib", "lib"]
